RESOLVED FIXED136647
Application Cache Storage: failed to execute statement "DELETE FROM CacheGroups" error "no such table: CacheGroups"
https://bugs.webkit.org/show_bug.cgi?id=136647
Summary Application Cache Storage: failed to execute statement "DELETE FROM CacheGrou...
Alexey Proskuryakov
Reported 2014-09-08 16:14:15 PDT
We always get this error when running regression tests: ERROR: Application Cache Storage: failed to execute statement "DELETE FROM CacheGroups" error "no such table: CacheGroups" This is because we are trying to a reset an empty database, deleting tables that don't exist yet.
Attachments
proposed fix (1.45 KB, patch)
2014-09-08 16:16 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-09-08 16:16:37 PDT
Created attachment 237817 [details] proposed fix
WebKit Commit Bot
Comment 2 2014-09-08 23:07:16 PDT
Comment on attachment 237817 [details] proposed fix Clearing flags on attachment: 237817 Committed r173419: <http://trac.webkit.org/changeset/173419>
WebKit Commit Bot
Comment 3 2014-09-08 23:07:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.