Application Cache Storage: failed to execute statement "DELETE FROM CacheGroups" error "no such table: CacheGroups" https://bugs.webkit.org/show_bug.cgi?id=136647

Reviewed by Darin Adler.

* loader/appcache/ApplicationCacheStorage.cpp: (WebCore::ApplicationCacheStorage::verifySchemaVersion):
Don't try to delete the tables if we can't expect to have them yet.


Canonical link: https://commits.webkit.org/154471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173419 268f45cc-cd09-0410-ab3c-d52691b4dbfc